restyle hamburger icon to a more readable colour (fix)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,6 +10,32 @@
   --washed-white: #FAF9F6;
 }
 
+.navbar-toggler-icon{
+  background-image: none!important;
+  background-color: #000;
+  height: 3px;
+  width: 25px;
+  margin: 10px 0;
+  position: relative;
+  transition: all 0.35s ease-out;
+  transform-origin: center;
+}
+
+.navbar-toggler-icon::before{
+  display: block;
+  background-color: #000;
+  height: 3px;
+  content: "";
+  position: relative;
+  top: -7px;
+  transition: all 0.15s ease-out;
+  transform-origin: center;
+}
+
+.navbar-toggler-icon::after{
+  display: block;
+}
+
 body{
   background-color: var(--washed-white);
   font-family: 'Libre-Baskerville', sans-serif;
